[gd_scene load_steps=4 format=3 uid="uid://ccdaonqvg03i8"]

[ext_resource type="Script" path="res://flingables/flingable.gd" id="1_5l0qn"]
[ext_resource type="Script" path="res://flingables/shot_indicator.gd" id="2_gs7q4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ic8bt"]
radius = 6.08276

[node name="Flingable" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_5l0qn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ic8bt")

[node name="ShotIndicator" type="Node2D" parent="."]
script = ExtResource("2_gs7q4")

[node name="BackgroundLine" type="Line2D" parent="ShotIndicator"]
width = 12.0

[node name="FillerLine" type="Line2D" parent="ShotIndicator"]
default_color = Color(0, 0, 0, 1)
